📝 more thoughts about the light bulb puzzle

--- a/src/data/puzzles/4.md
+++ b/src/data/puzzles/4.md
@@ -6,10 +6,10 @@ category: "general"
 ---
 
 ## Question
-There is a light bulb inside a room and four switches outside. All switches are currently at off state and only one switch controls the light bulb. You may turn any number of switches on or off any number of times you want. How many times do you need to go into the room to figure out which switch controls the light bulb? 
+There is a light bulb inside a room and three switches outside. All switches are currently in off state and only one switch controls the light bulb. You may turn any number of switches on or off any number of times you want. How many times do you need to go into the room to figure out which switch controls the light bulb? 
 
 ## Hint
-A lighted bulb also emits heat, and gets hot slowly (not instantaneously!)
+A lighted bulb also emits heat and gets hot slowly (not instantaneously!)
 
 ## Answer
 1
@@ -18,19 +18,52 @@ A lighted bulb also emits heat, and gets hot slowly (not instantaneously!)
 <!-- 
 I think this puzzle is silly, but it was asked to my friend in an interview, so I can't skip it.  
 -->
-The bulb gets hot slowly when turned on. Turn on bulb 1 and 2 keeping others off. Wait for 20 minutes. Switch off 2 and turn on 3, quickly enter room and touch the bulb. If the bulb is:
 
-| Bulb         | Inferred Switch |
-| ------------ | --------------- |
-| on and hot   | -> 1            |
-| off but hot  | -> 2            |
-| on but cool  | -> 3            |
-| off and cool | -> 4            |
+The bulb gets hot slowly when turned on. Turn on the switch #$1$ for 10 minutes, turn it off and turn on the switch #$2$ and get into the room. There are $3$ possible cases.
 
-Following table shows this information in a grid format:
+* If the bulb is on, then switch #$2$ controls the bulb.
+* If the bulb is off, but hot, then switch #$1$ controls the bulb.
+* If the bulb is off and cool, then switch #$3$ controls the bulb. 
+
+Thus, we can infer the switch that controls the bulb in one entry.
+
+---
+
+### Follow up question
+
+What if there were $4$ switches?
+
+### Follow up answer
+
+Assuming that modern bulbs heat up slowly, we can infer this in one entry.
+Turn on the switch #$1$ and #$2$ keeping others off. Wait for 10 minutes. Turn off #$2$, turn on #$3$, and quickly enter the room. Following are the possible states and the corresponding switch that controls the bulb.
+
+
+| State        |               | Inferred Switch |
+| ------------ | :-----------: | --------------- |
+| on and hot   | $\rightarrow$ | 1               |
+| off but hot  | $\rightarrow$ | 2               |
+| on but cool  | $\rightarrow$ | 3               |
+| off and cool | $\rightarrow$ | 4               |
+
+
+The following table shows this information in a grid format:
 
 |      |  On   |  Off  |
 | ---- | :---: | :---: |
 | Hot  |   1   |   2   |
 | Cold |   3   |   4   |
 
+
+<!--
+Author's notes: 
+
+Many times there are situations where a single perspective is not sufficient to solve a problem. Many times, we use indirect effects to make an inference.
+
+1. Observing stars: Just like the light bulb problem, astronomers often need to rely on both direct and indirect observations to understand celestial bodies. Direct observation is like seeing if the bulb is on or off (like directly observing a star's brightness or spectral type). Indirect observation is like feeling if the bulb is hot or cold (like observing the gravitational effect of a star on its surrounding bodies). For example, in identifying binary star systems, astronomers may see one star (direct observation) but identify the presence of a second star through its gravitational effects (indirect observation). We can even infer the presence of black holes by observing the gravitational effects on the surrounding stars.
+
+2. Searching for exoplanets: In the search for exoplanets, scientists often cannot directly see the planets due to their small size and large distances. However, they can directly observe the dimming of a star's light when a planet passes in front of it (like seeing if the bulb is on or off). They also use indirect observation, for instance, by watching the star's wobble due to the gravitational pull of the planet (similar to feeling the bulb's heat).
+
+3. Observing Solar Flares: When solar flares occur, they emit intense light (direct observation). After the flare, a coronal mass ejection may follow, which can be detected by the increased solar wind that it generates (indirect observation). By observing both effects, scientists can better understand solar flare phenomena, much like observing the light and heat of the bulb can help determine the controlling switch.
+
+-->
