--- a/src/data/puzzles/9.md
+++ b/src/data/puzzles/9.md
@@ -6,7 +6,7 @@ category: "general"
 ---
 
 ## Question
-An airplane flies in a straight line from airport $A$ to airport $B$, and then back in a straight line from $B$ to $A$. It travels with a constant engine speed and there is no wind. Will the total travel time for the same round trip be greater, less or the same if, throughout both flights a constant wind blows from $A$ to $B$?
+An airplane flies in a straight line from airport $A$ to airport $B$, and then back in a straight line from $B$ to $A$. It travels with a constant engine speed and there is no wind. Will the total travel time for the same round trip be greater, less or the same if, throughout both the flights a constant wind blows from $A$ to $B$?
 
 
 ## Hint
