📝 10 buring cord revisit

--- a/src/data/puzzles/10.md
+++ b/src/data/puzzles/10.md
@@ -6,7 +6,9 @@ category: "general"
 ---
 
 ## Question
-You are given two cords that both burn exactly one hour, not necessarily with constant speed. How should you light the cords in order to determine a time interval of exactly 15 minutes? Extra question: how to light just one cord and measure 15 minutes?
+You are given two cords that both burn in exactly one hour, not necessarily at uniform rate. How should you light the cords in order to determine a time interval of exactly 15 minutes?
+
+
 
 ## Hint
 Because this lacks uniformity, we cannot break the cord in half, and expect it to burn in half the time. But we can burn both ends of a cord to finish it in half the time it would have taken otherwise!
@@ -15,12 +17,14 @@ Because this lacks uniformity, we cannot break the cord in half, and expect it t
 
 
 ## Solution
-Burn first cord at one end and the second cord at both ends. Half an hour later, second cord finishes burning. Now you can burn the other end of first cord, and it shall finish exactly in 15 minutes.
- 
-Now can you guess how to measure 15 minutes using only one cord?
+First, let's try to measure 30 minutes. To do that, we can burn both the ends of a cord. Even if it burns non-uniformly, it will still finish in exactly 30 minutes.
+
+To measure 15 minutes, burn the first cord at one end and the second cord at both the ends. Half an hour later, when the second cord finishes burning, the first cord has exactly 30 minutes of length left. Now we can burn the other end of first cord, and it shall finish in exactly 15 minutes.
 
 
+### Follow-up Question
+Instead of having two cords, what if you only had one cord, how would you measure 15 minutes?
 
+### Follow-up Answer
 
-
-Break the cord into approximately half, and burn these two cords form both their ends. If both these cords finish burning together, that means exactly 15 minutes have passed. If any one of these cords finishes first, break the other cords from approximately middle, and further burn all ends of these little cords. Continuing this way theoretically leads to exactly 15 minutes!
+Break the cord into approximately half, and burn these two cords form both of their ends. If both these cords finish burning together, that means exactly 15 minutes have passed. If any one of these cords finishes first, break the other cords from approximately middle, and further burn all ends of these little cords. Continuing this way theoretically leads to exactly 15 minutes!
