--- a/src/data/puzzles/11.md
+++ b/src/data/puzzles/11.md
@@ -6,7 +6,7 @@ category: "discrete"
 ---
 
 ## Question
-There are 10 black socks and 10 red socks  in a cupboard. Your task is to draw a few socks at random, without looking, such that you get at-least one matching pair (single color). What's the least number of socks that you need to draw?
+There are 10 black socks and 10 red socks in a cupboard. Your task is to draw a few socks at random, without looking, such that you get at least one matching pair (single color). What's the least number of socks that you need to draw?
 
 Assume that there is no left-right distinction in these socks.
 
@@ -17,7 +17,7 @@ Pigeonhole principle
 3
 
 ## Solution
-The Pigeonhole Principle states that if there are $(N+1)$ pigeons to fit in $N$ holes, atleast one hole will have $2$ or more pigeons. Hence, if you pick $3$ socks (pigeons) from $2$ colors (holes), at least one color (hole) will have $2$ or more socks (pigeons), i.e. a pair is guaranteed with either red or black color.
+The Pigeonhole Principle states that if there are $(N+1)$ pigeons to fit in $N$ holes, at least one hole will have $2$ or more pigeons. Hence, if you pick $3$ socks (pigeons) from $2$ colors (holes), at least one color (hole) will have $2$ or more socks (pigeons), i.e. a pair is guaranteed with either red or black color.
 
-In general, if there are $N$ different colored socks, then we would draw $N+1$ socks to ensure atleast one matching pair.
+In general, if there are $N$ different colored socks, then we would draw $N+1$ socks to ensure at least one matching pair.
 
