--- a/src/data/puzzles/9.md
+++ b/src/data/puzzles/9.md
@@ -18,7 +18,7 @@ The more the wind blows, the total time will be higher even though one of the jo
 ## Solution
 
 ### Intuition
-The time during which the plane's speed is boosted is shorter than the time during which it is slowed-down, so the over-all effect is of slow-down. 
+The time during which the plane's speed is boosted is shorter than the time during which it is slowed down, so the over all effect is of slow-down. 
 
 ----
 
@@ -45,6 +45,6 @@ For $0 < w < s$, the denominator in the first term is less than $s$, and therefo
 ----
 ### Footnotes
 
-1. In the edge case, where plane's speed is the same as the wind. In one direction, plane's speed doubles, while in the other, it becomes zero! (i.e. it takes an infinite amount of time to finish the journey!)
+1. Consider the edge case, where the plane's speed is the same as the wind. In one direction, the plane's speed is doubled, while in the other, it becomes zero! (i.e. it takes an infinite amount of time to finish the journey!)
 
 
