--- a/src/data/puzzles/10.md
+++ b/src/data/puzzles/10.md
@@ -6,7 +6,7 @@ category: "general"
 ---
 
 ## Question
-You are given two cords that both burn in exactly one hour, not necessarily at uniform rate. How should you light the cords in order to determine a time interval of exactly 15 minutes?
+You are given two cords that both burn in exactly one hour, not necessarily at a uniform rate. How should you light the cords to determine a time interval of exactly 15 minutes?
 
 
 
@@ -17,9 +17,9 @@ Because this lacks uniformity, we cannot break the cord in half, and expect it t
 
 
 ## Solution
-First, let's try to measure 30 minutes. To do that, we can burn both the ends of a cord. Even if it burns non-uniformly, it will still finish in exactly 30 minutes.
+First, let's try to measure thirty minutes. To do that, we can burn both ends of a cord. Even if it burns non-uniformly, it will still finish in exactly 30 minutes.
 
-To measure 15 minutes, burn the first cord at one end and the second cord at both the ends. Half an hour later, when the second cord finishes burning, the first cord has exactly 30 minutes of length left. Now we can burn the other end of first cord, and it shall finish in exactly 15 minutes.
+To measure 15 minutes, burn the first cord at one end and the second cord at both ends. Half an hour later, when the second cord finishes burning, the first cord has exactly 30 minutes of length left. Now we can burn the other end of the first cord, and it shall finish in exactly 15 minutes.
 
 
 ### Follow-up Question
@@ -27,4 +27,4 @@ Instead of having two cords, what if you only had one cord, how would you measur
 
 ### Follow-up Answer
 
-Break the cord into approximately half, and burn these two cords form both of their ends. If both these cords finish burning together, that means exactly 15 minutes have passed. If any one of these cords finishes first, break the other cords from approximately middle, and further burn all ends of these little cords. Continuing this way theoretically leads to exactly 15 minutes!
+Break the cord into approximately half, and burn these two cords from both of their ends. If both these cords finish burning together, that means exactly 15 minutes have passed. If any one of these cords finishes first, break the other cords from approximately the middle, and further burn all ends of these little cords. Continuing this way theoretically leads to exactly 15 minutes!
