📝 anti podal points and road accidents

--- a/src/data/puzzles/12.md
+++ b/src/data/puzzles/12.md
@@ -6,7 +6,9 @@ category: "discrete"
 ---
 
 ## Question
-Assuming that temperature varies continuously, prove that there are always two opposite points on the Earth's surface that have the same temperature.
+Prove that there are two opposite points on the Earth's surface that have the same temperature.
+
+Assume that the temperature varies continuously over the surface.
 
 ## Hint
 Consider the difference in temperature between two opposite points.
@@ -29,15 +31,22 @@ $f(\pi)=t(\pi)-t(2 \pi) = t(\pi)-t(0) = -f(0)$
 
 Either both $f(0)$ and $f(\pi)$ are $0$ or one of them is positive and the other is negative.
 
-Using [Mean Value Theorem](https://en.wikipedia.org/wiki/Mean_value_theorem), $f(0)$ must be zero for some point between $0$ and $\pi$.
+Using [Mean Value Theorem](https://en.wikipedia.org/wiki/Mean_value_theorem), $f(\theta)$ must be zero for some point between $0$ and $\pi$.
 
 Thus, there will always be a pair of two opposite points at the same temperature.
 
-
-There are an uncountably infinite number of such pairs.
-
 ---
 
-A video explanation by `singingbanana` is [here](https://www.youtube.com/watch?v=5Px6fajpSio).
+### Trivia
 
-An alternate version of this puzzle is the [Mountain Man](http://www.techinterview.org/post/521419748/mountain-man)
+1. There are an uncountably infinite number of such pairs. Consider two random opposite points, such that their temperature is not the same. Let us call these two points "poles". We can create an uncountably infinite number of distinct circles passing through these two poles, by slightly rotating on an axis passing through the poles. Each circle will give a unique pair of antipodal points, that will not coincide with the poles.
+
+2. [Borsuk-Ulam Theorem](https://en.wikipedia.org/wiki/Borsuk%E2%80%93Ulam_theorem) states that every continuous function from an n-sphere into Euclidean n-space maps some pair of antipodal points to the same point. Here, two points on a sphere are called antipodal if they are in exactly opposite directions from the sphere's center. 
+    * At $n=1$, there exist two opposite points on the circle where the temperature is the same. 
+    * At $n=2$, at any moment, there is always a pair of antipodal points on the Earth's surface with equal temperatures and equal barometric pressures. 
+    The proof is easy for $n=1$ using MVT as shown above.
+
+
+3. A video explanation by `singingbanana` is [here](https://www.youtube.com/watch?v=5Px6fajpSio). An alternate version of this puzzle is the [Mountain Man](http://www.techinterview.org/post/521419748/mountain-man)
+
+
