--- a/src/data/puzzles/13.md
+++ b/src/data/puzzles/13.md
@@ -1,22 +1,24 @@
 ---
 puzzleId: 13
-title: "Accidents in Half Time"
+title: "Half Time"
 difficulty: "easy"
 category: "probability"
 ---
 
 ## Question
-The probability of accidents on a road in one hour is $3/4$. What is the probability of accidents in half hour?
+The probability of having accidents on a road in one hour is $3/4$. What is the probability of accidents in half an hour?
+
+<!-- After observing this road for hundreds of hours, we noticed that during 75% of those hours, some accidents occurred. -->
 
 ## Hint
-The joint probability of no events in two intervals of half-hours is the same as the probability of no event in one hour.
+The joint probability of no events in two intervals of half an hour each is the same as the probability of no event in one hour.
 
 ## Answer
 1/2
 
 ## Solution
 
-Probability of no accident in $1$ hour = P(no accidents in the first half hour ) * P(no accidents in the next half hour)
+Probability of no accident in $1$ hour = P(no accidents in the first half an hour ) * P(no accidents in the next half an hour)
 
 $\implies 1 - 3/4 =p^2 \implies p=1/2$
 
@@ -36,4 +38,15 @@ Given that $p(1h)=3/4 \implies p(0.5h)=1/2$ and $p(2h)=15/16$.
 
 The way we have defined $p(t)$ above, it is the probability that at least $1$ accident happens in time interval $t$. Thus, as $t$ increases, $p(t)$ also increases.
 
-The assumption for the independence of disjoint intervals is called [Memorylessness](https://en.wikipedia.org/wiki/Memorylessness)
+---
+
+### Trivia
+
+1. The assumption for the independence of disjoint intervals is called [Memorylessness](https://en.wikipedia.org/wiki/Memorylessness)
+
+2. The probability of having at least one accident = 3/4. But there can be any number of accidents. Typically, it follows a Poisson Distribution, with parameter $\lambda =$ average number of accidents in that period.
+
+3. The waiting time for the next accident is a continuous random variable. Typically it follows an exponential distribution, with the parameter $\beta = $ average waiting time for the next event. 
+
+4. The occurrence rate ($\lambda$) and the average waiting time ($\beta$) are related as $\beta = 1/\lambda$. This means that if on average, there are 3 meteorites per hour, then on average we wait for (1/3) hours to see the next meteorite.
+
