📝 simple induction proof for josephus problem

--- a/src/data/puzzles/23.md
+++ b/src/data/puzzles/23.md
@@ -6,7 +6,7 @@ category: "general"
 ---
 
 ## Question
-1024 pirates stand in a circle. They start shooting alternately in a cycle such that the 1st pirate shoots the 2nd, the 3rd shoots the 4th and so on. The pirates who got shot are removed from the game. They continue in circles, shooting the next standing pirate, till only one pirate is left. Which position should someone stand to survive?
+1024 pirates stand in a circle. They start shooting alternately in a cycle such that the 1st pirate shoots the 2nd, the 3rd shoots the 4th and so on. The pirates who got shot are eliminated from the game. They continue in circles, shooting the next standing pirate, till only one pirate is left. Which position should someone stand to survive?
 
 ## Hint
 1024 is a power of 2. Try to find a pattern using smaller powers of 2.
@@ -15,13 +15,30 @@ category: "general"
 1
 
 ## Solution
-Let us define "round" as one complete circle of shootings.
+Let us try a few numbers.
 
-Let's say $n = 2^k$. 
+1. For $n=2$, the $1^{\text{st}}$ person survives by shooting the $2^{\text{nd}}$.
+2. For $n=4$, the $1^{\text{st}}$ person survives again.
 
-In the first round, all even-numbered people are shot, and only odd-numbered people survive. Note that $1^{\text{st}}$ person survives, and in total, $2^{k-1}$ people survive. In the second round, the $1^{\text{st}}$ starts shooting the same way, and the $2^{\text{nd}}$ person dies. Continuing this way, we see that the $1^{\text{st}}$ person always survives.
+Let us define "round" as one complete circle of shootings. Logically it makes sense that the first person always survives as the number of people keeps halving evenly in each round. Let us prove this by induction.
 
-Hence, for $n = 1024$ (or any other power), the safe position is always the $1^{\text{st}}$ position.
+Let $S(n)$ be the safe position for a given $n = 2^{k}$
+
+**Base Case**: When $k = 0$, we have one pirate $(2^0 = 1)$. The only pirate, which is the first, is the last to survive, so $S(1) = 1$.
+
+**Inductive Step**: Assume our hypothesis is true for $k = m$. That is, $S(2^m) = 1$.
+
+We need to prove this holds for $k = m + 1$, i.e. for $n=2^{m+1}$ pirates.
+
+In the first round of shooting, all pirates in even-numbered positions are eliminated. Therefore, at the end of the first round, there are $2^m$ pirates left, all in odd-numbered positions.
+
+Now, the pirates' positions are reset, and the first pirate (who was initially in position 1) is still in position 1.
+
+Therefore, we now have a circle of $2^m$ pirates, starting from the first pirate. The inductive hypothesis states that the first pirate will survive till the end.
+
+Thus, $S(2^k) = 1$ is true for any integer $k\ge 0$.
+
+For $n = 1024 = 2^{10}$, the position of the surviving pirate would still be the $1^{\text{st}}$ position. Therefore, someone should stand in the first position to survive.
 
 
 ---
@@ -30,7 +47,7 @@ Hence, for $n = 1024$ (or any other power), the safe position is always the $1^{
 
 1. This problem is called "Josephus problem", named after Flavius Josephus, a Jewish historian living in the $1^{\text{st}}$ century. Allegedly, he and his 40 soldiers were trapped in a cave by Roman soldiers. Preferring suicide instead of being captured, they decided to form a circle and, kill every third soldier until none remained. Josephus, who preferred to surrender, managed to arrange the order of the soldiers in the circle so that he and another man were the last two survivors. At this point, they surrendered to the Romans rather than killing themselves.
 
-2. If $n$ is not a power, then we can use a formula. Find the largest $m$ such that $2^m < n$. 
+2. If $n$ is not a power of $2$, then we can use a formula. Find the largest $m$ such that $2^m < n$. 
 
     Take $l = n-2^m$. 
     Then the safe position is $2 \cdot l + 1$. 
@@ -41,6 +58,6 @@ Hence, for $n = 1024$ (or any other power), the safe position is always the $1^{
     
 
 <!-- 
-Since this site might be used by the interviewers as well, I have changed $n=100$ to $n=1024$ to promote critical thinking instead of rote-learning. 
+Since this site might be used by the interviewers as well, I have changed $n=100$ to $n=1024$ to promote critical thinking instead of rote learning or manual counting.
 -->
 
