📝 added simulation for monty hall

--- a/src/data/puzzles/101.md
+++ b/src/data/puzzles/101.md
@@ -1,6 +1,6 @@
 ---
 puzzleId: 101
-title: "Drunk Passenger?"
+title: "Drunk Passenger"
 difficulty: "medium"
 category: "probability"
 ---
@@ -22,7 +22,7 @@ Note that the last passenger can only take seat #1 or #100.
 * If any passenger takes seat #1, the cycle stops, and all the subsequent passengers take their own seats (including the last). 
 * Otherwise, if the #100 seat is taken before #1, the cycle is paused, i.e., the subsequent passengers do take their own seats, but the last passenger would take seat #1. 
 
-Now, any passenger from 1st to 99th who is picking a random vacancy will choose between #1, #100 or any other seat equally likely. Thus, by symmetry, #1 or #100, anyone will be taken first - with equal probability. 
+Now, any passenger from 1st to 99th who is picking a random vacant seat will choose between #1, #100 or any other seat equally likely. Thus, by symmetry, #1 or #100, anyone will be taken first - with equal probability. 
 
 Hence the last person ends up in their own seat with a probability of 0.5
 
@@ -30,7 +30,7 @@ Hence the last person ends up in their own seat with a probability of 0.5
 
 ### Follow-up Question
 
-What's the probability that the second-last person find their seat vacant?
+What's the probability that the second-last person sits on their seat?
 
 ### Follow-up Answer
 
