--- a/src/data/puzzles/18.md
+++ b/src/data/puzzles/18.md
@@ -6,19 +6,21 @@ category: "general"
 ---
 
 ## Question
-Light bulbs are numbered 1 to 100, and kept off initially. First person comes and toggles all the bulbs which are multiple of 1, i.e. he switches all bulbs to on. Second person toggles all multiples of 2, i.e he turns of even bulbs. Third person comes and toggles all multiples of 3. This process continues till 100 persons pass. After this, how many bulbs are  ON?
+Light bulbs are numbered 1 to 100, and kept off initially. The first person comes and toggles all the bulbs which are multiple of 1, i.e. they switch all bulbs to 'ON'. The second person toggles all multiples of 2, i.e. they turn the even bulbs 'OFF'. The third person comes and toggles all multiples of 3. This process continues till the $100^{\text{th}}$ person do their part. After this, how many bulbs are 'ON'?
 
 ## Hint
-Consider the bulb number 9.
+Consider bulb number 9.
 
 ## Answer
 10 bulbs
 
 ## Solution
-We notice that for  a perfect square (like 9), the number of factors are always odd, for example:
-Number of factors of (16) = # [1,2,4,8,16] = 5
-Note that for non-square numbers, factors are even. 
+We notice that for a perfect square (like 9), the number of factors is always odd, for example The number of factors of (16) = # [1,2,4,8,16] = 5
+Note that for non-square numbers, factors are always even. 
 
-As a factor toggles the state of a bulb, bulb number 9 will be toggled by 1,3 & 9.  Thus bulb number 9 will switch ON, OFF, ON respectively. Note that odd number of factors cause bulb 9 to be ON at the end.
+A bulb $K$ is toggled between ON / OFF states only by the person with a factor of $K$. Bulb number 9 will be toggled by 1,3 & 9.  Thus bulb number 9 will be 'ON', 'OFF' and 'ON' respectively. Because of odd factors, the bulb stays 'ON' at the end.
 
-We note that for odd number of factors is the cause of bulb staying on at the end. Similarly every squared digit bulb will be switched on, and rest will remain off after all factors toggle. Thus the bulbs 1,4,9....81,100 are ON, at the end. Hence 10 bulbs are on.
+All the perfect-square numbered bulbs (odd factors) will stay 'ON', and the rest bulbs will turn OFF at the end.
+Thus bulbs 1,4,9....81,100 are ON, at the end.
+
+Hence 10 bulbs are on.
