--- a/src/data/puzzles/17.md
+++ b/src/data/puzzles/17.md
@@ -6,13 +6,15 @@ category: "general"
 ---
 
 ## Question
-There are two beakers, one containing water, the other wine (equal volumes). A certain amount of water is transferred to the wine, then the same amount of the mixture is transferred back to the water. Is there now more water in the wine than there is wine in the water?
+There are two jars, one contains water, and the other contains wine (equal volumes). A certain amount of water is transferred to the wine, then the same amount of the mixture is transferred back to the water beaker. Is there now more water in the wine than there is wine in the water?
+
+Assume there is no expansion, compression, spillage or any chemical reaction.
 
 ## Hint
-
+If the two jars contain the same volume of liquids initially and finally, then why would be one more impure?
 
 ## Answer
 Equal!
 
 ## Solution
-The main point is that the final volumes of mixture liquids are equal. This means in jar A, volume of water + wine is same as that in jar B. Assume original volume as L. Suppose final volume in jar A is x for water and (L-x) for wine. This implies that jar B has x amount of wine and (L-x) of water. This proves that there are equal amounts of water in the wine jar and wine in the water jar. 
+The final volumes of both the mixture-liquids are equal. This means in the first jars, the combined volume of water & wine is the same as that of jar B. Assume that the original volume is $L$. Suppose the final volume in the first jar is $x$ for water and $(L-x)$ for wine. This implies that the second jar has $x$ amount of wine and $(L-x)$ of water. This proves that there are equal amounts of water in the wine jar and wine in the water jar. 
