--- a/src/data/puzzles/19.md
+++ b/src/data/puzzles/19.md
@@ -1,32 +1,50 @@
 ---
 puzzleId: 19
-title: "Getting fair result from unfair coin"
+title: "UnBiased coin"
 difficulty: "easy"
 category: "probability"
 ---
 
 ## Question
-We have a weighted coin which shows a Head with probability p, (0.5<p<1). How do we get a fair toss from this? That is, how do we toss this coin in such a way that we can have probability of winning = loosing = 50%?
+We have a weighted coin that shows a Head with probability $p$ and tails with $1-p$, $(0.5<p<1)$.
+How to define two equally likely events using this coin?
+
+Each event is a function of the outcomes of one or more coin tosses. For example, we can toss 2 times and define Event1 as [HH, TT] and Event2 as [TH, HT].
 
 ## Hint
-Clearly we cannot have a fair toss in a single flip of this coin. But by tossing this coin 2 times, we can assign the outputs to "win" or "loose", such that we have a 50% chance for both.
+Since $p$ is unknown, the probability of HH and TT are unreliable.
 
 ## Answer
-Toss 2 times, mapping HT to "win", TH to "loose" and repeat the process otherwise.
+Toss 2 times, event1 is HT, event2 is TH, and repeat the process otherwise.
 
 ## Solution
-Toss the coin twice. If consecutive Heads-Tails appears (HT), we "win". In case of (TH), we "loose". If (TT) or (HH) appears, repeat the process. Probability of infinite repetition (p * p * .....) + (1-p) * (1-p) * .... = 0 + 0 = 0;
+For an arbitrary $p$, this cannot be accomplished in a single toss. If we toss twice, we observe that the probability of HT and TH is the same, i.e. the probability of heads in the first toss and tails in the second is the same as its reverse, i.e. $p \cdot (1-p) = (1-p) \cdot p$ 
 
-Probability of H-T and T-H is equal hence it's fair now.
+Hence, we can declare these two as the two events. If we observe HH or TT, we retry.
 
-I proposed a faster method, "lets keep tossing the coin to form a sequence of H's & T's . I win if HT appears before TH" . Was I bluffing?
+---
+### Follow-up question
+What's the probability of an infinite repetition?
 
+### Follow-up Answer
+Let us calculate the probability of the first retry
 
+Probability of HH or TT = $p^2 + (1-p)^2$
 
+$P(r)= 2p^2 -2p + 1$
 
+This is a quadratic equation, with a minimum value of $P(r) = 0.5$ at $p=0.5$, and $0.5 < P(r)< 1$ for the range $0.5 < p < 1$
 
+Thus, the probability of an infinite repetition is $P(r) \cdot P(r) \cdot ... = 0$ (because $P(r) < 1$)
 
+Note that if $r$ is close to 1 then $P(r)$ is close to 1, and it might take a very long sequence before event 1 or event 2 occurs.
 
+<!-- 
+---
+### Follow-up Question 2
+Let's keep tossing the coin to form a sequence of Heads and Tails. I win if HT appears before TH, and you win otherwise. Is this a fair game? 
 
-
-Actually yes, the probability of HT before TH is just p in second game.
+### Follow-up Answer 2
+This game is unfair, the probability of HT before TH is just p in second game. 
+This becomes a markov chain problem, and requires the knowledge of state diagrams
+-->
