--- a/src/data/puzzles/20.md
+++ b/src/data/puzzles/20.md
@@ -1,21 +1,38 @@
 ---
 puzzleId: 20
-title: "Waiting for the Train"
+title: "You have a train to catch!"
 difficulty: "easy"
 category: "probability"
 ---
 
 ## Question
-Spiderman has two girlfriends, Mary Jane & Gwen Stacy. After every mission, he rushes to the central subway. Since spidey is a nice man, much impartial, he takes which-ever train arrives first. From subway, one series go towards Mary's place, and another series move towards Stacy. Trains from either series appear every 10 minutes. Also, Peter Parker sticks with the train which arrives first. 
-But somehow, he notices that he is spending 9 times more dates with Mary Jane than Stacy. Can you explain why?
+Spiderman has two close friends, Mary Jane & Gwen Stacy. After every mission, he rushes to the central subway. One line heads towards Mary's place, and another towards Stacy. Trains from each line arrive every 10 minutes. Spiderman being impartial always boards the first train that arrives.
+
+However, he observes that he ends up visiting Mary Jane nine times more often than Gwen Stacy. Can you decipher why?
 
 
 ## Hint
-Do you think ratio should be 50:50? Do you think the gap between each train's arrival is 5 minutes? Can a train arrive always earlier than the other and still be at every 10 minutes gap?
+The gap between the two trains may not be 5 minutes each.
 
 ## Answer
-
+The gap from $M$ to $G$ is 1 minute, and the gap from $G$ to $M$ is 9 minutes
 
 ## Solution
-Train to Mary Jane's place comes at say times 0 and 10, while the train to Stacy's place comes at times 1 and 11. So 9/10 times, train to Mary Jane's place is appearing earlier.
+Since both trains arrive at the same frequency of 10 minutes, probably the solution lies in the gap between the two consecutive trains of each line.
+Suppose the train $M$ (towards Mary) arrives at the minutes: $0, 10, 20,...$
+
+Let the train $G$ (towards Gwen) arrive at $x, (x+ 10 ), (x+20)...$ and so on, where $(0 < x < 10)$
+
+Suppose Spiderman randomly reaches the station at some time $t + 10\cdot n$ minute where $n$ is any integer and $t$ is the fraction that determines his fate, $0 < t \le 10$.
+
+Note that if $0 < t \le x$ means that he just missed $M$ and now has to wait for $G$. While $x <t \le 10$ means the opposite.
+
+Thus, the probability that $G$ arrives before $M$ is:
+
+$P(G) = P(0 < t \le x)$
+
+$0.1 = \dfrac{x-0}{10} \implies x = 1$
+
+The train heading to Mary Jane's location arrives precisely 1 minute before the train heading to Gwen Stacy's location. Therefore, 9 out of 10 times, spiderman reaches the station when the next train is towards Mary.
+
 
