--- a/src/data/puzzles/101.md
+++ b/src/data/puzzles/101.md
@@ -43,4 +43,4 @@ The probability that the $k^{\text{th}}$ person from the last will find their se
 ### Script
 
 Not convinced? Simulate using this
-[Colab Script](https://colab.research.google.com/gist/varun-seth/631aa48d025c1838eab398bb1db730de/101_drunk_passenger.ipynb)
+[Colab Script](https://colab.research.google.com/gist/varun-seth/631aa48d025c1838eab398bb1db730de/101_drunk_passenger.ipynb#sandboxMode=true)
