--- a/src/data/puzzles/14.md
+++ b/src/data/puzzles/14.md
@@ -52,5 +52,5 @@ The probability of winning the game by switching after the host has opened $n-2$
 ### Script
 
 Not convinced? Simulate using this
-[Colab Script](https://colab.research.google.com/gist/varun-seth/e828928baefdfd503548bef522c15a7b/14_monty_hall.ipynb)
+[Colab Script](https://colab.research.google.com/gist/varun-seth/e828928baefdfd503548bef522c15a7b/14_monty_hall.ipynb#sandboxMode=true)
 
