--- a/src/data/puzzles/20.md
+++ b/src/data/puzzles/20.md
@@ -6,7 +6,7 @@ category: "probability"
 ---
 
 ## Question
-Spiderman has two close friends, Mary Jane & Gwen Stacy. After every mission, he rushes to the central subway. One line heads towards Mary's place, and another towards Stacy. Trains from each line arrive every 10 minutes. Spiderman being impartial always boards the first train that arrives.
+Spiderman has two close friends, Mary Jane & Gwen Stacy. After every mission, he rushes to the central subway. One line heads towards Mary's place, and another towards Stacy. Trains from each line leave every 10 minutes. Spiderman being impartial always boards the first train that leaves.
 
 However, he observes that he ends up visiting Mary Jane nine times more often than Gwen Stacy. Can you decipher why?
 
@@ -18,21 +18,21 @@ The gap between the two trains may not be 5 minutes each.
 The gap from $M$ to $G$ is 1 minute, and the gap from $G$ to $M$ is 9 minutes
 
 ## Solution
-Since both trains arrive at the same frequency of 10 minutes, probably the solution lies in the gap between the two consecutive trains of each line.
-Suppose the train $M$ (towards Mary) arrives at the minutes: $0, 10, 20,...$
+Since both trains leave at the same frequency of 10 minutes, probably the solution lies in the gap between the two consecutive trains of each line.
+Suppose the train $M$ (towards Mary) leaves at the minutes: $0, 10, 20,...$
 
-Let the train $G$ (towards Gwen) arrive at $x, (x+ 10 ), (x+20)...$ and so on, where $(0 < x < 10)$
+And the train $G$ (towards Gwen) leaves at the minutes: $x, (x+ 10 ), (x+20)...$ and so on, where $(0 < x < 10)$
 
-Suppose Spiderman randomly reaches the station at some time $t + 10\cdot n$ minute where $n$ is any integer and $t$ is the fraction that determines his fate, $0 < t \le 10$.
+Suppose Spiderman randomly reaches the station at some time $t + 10\cdot n$ minutes where $n$ is an arbitrary integer and $t$ is the fraction that determines his fate, $0 < t \le 10$.
 
 Note that if $0 < t \le x$ means that he just missed $M$ and now has to wait for $G$. While $x <t \le 10$ means the opposite.
 
-Thus, the probability that $G$ arrives before $M$ is:
+Thus, the probability that he takes the train $G$ is:
 
 $P(G) = P(0 < t \le x)$
 
 $0.1 = \dfrac{x-0}{10} \implies x = 1$
 
-The train heading to Mary Jane's location arrives precisely 1 minute before the train heading to Gwen Stacy's location. Therefore, 9 out of 10 times, spiderman reaches the station when the next train is towards Mary.
+The train heading to Mary Jane's location leaves precisely 1 minute before the train heading to Gwen Stacy's location. Therefore, 9 out of 10 times, spiderman reaches the station when the next train is leaving towards Mary.
 
 
