--- a/src/data/puzzles/216.md
+++ b/src/data/puzzles/216.md
@@ -51,6 +51,6 @@ Hence the answer: $1/3 + 1/4 = 7/12$
 
 Not convinced? Here is a simulation script that shows the probability converging to 7/12.
 
-[Colab Script](https://colab.research.google.com/gist/varun-seth/a10254682b88c22ae09e9ddf25d1dba6/puzzle_216_left_some_candies.ipynb)
+[Colab Script](https://colab.research.google.com/gist/varun-seth/a10254682b88c22ae09e9ddf25d1dba6/puzzle_216_left_some_candies.ipynb#sandboxMode=true)
 
 
