--- a/src/data/puzzles/221.md
+++ b/src/data/puzzles/221.md
@@ -86,7 +86,7 @@ This game has nothing to do with dynamic programming or number theory. It is an 
 
 Using a script to generate the first move for a few values of $N$.
 
-Find the [Colab Script here](https://colab.research.google.com/gist/varun-seth/86be5b460f6df480923a685bd4905635/puzzle_221_game_of_divisors.ipynb).
+Find the [Colab Script here](https://colab.research.google.com/gist/varun-seth/86be5b460f6df480923a685bd4905635/puzzle_221_game_of_divisors.ipynb#sandboxMode=true).
 
 
 |  $N$  | &nbsp;&nbsp;&nbsp;&nbsp; First move |
