--- a/src/data/puzzles/24.md
+++ b/src/data/puzzles/24.md
@@ -6,14 +6,31 @@ category: "probability"
 ---
 
 ## Question
-There is a regular die and a special invisible die. You know that regular die has integers 1 to 6, but don't know what's on the invisible dice. After tossing, I speak the sum of outcome of both die. It so happens that the outcome is an interger between 1 to 12, with equal probability (1/12 each). Can you guess what are the numbers printed on special invisible dice?
+I bought two fair six-sided dice. Keeping the first one untouched, I modified the second die, by erasing each face and writing a number of my own. Now, the sum of outcomes of the two dice is equally likely an integer between 1 and 12. Can you deduce the numbers written on the modified die?
 
+Note: For each dice, each face is equally likely to turn up after a toss. 
 
 ## Hint
-For the sum to be 1, we need atleast 0, and for sum to be 12, what do we need? Can you guess the digits of invisible dice now?
+For the sum to be 1, we need at least one face must be $0$
 
 ## Answer
- 0 0 0 6 6 6
+0 0 0 6 6 6
 
 ## Solution
-Faces of cube have numbers: 0 0 0 6 6 6 . If we compute conditional probability, we get 0 with probabilty (1/2) and 6 with probability (1/2). Hence the sum is 1,2....12 with probability of (1/12) each
+
+The sum of 1 and 12 ensures that there is at least one 0 and one 6. Since the sum ranges from 1 to 12 only, the faces of the modified die can only have an integer from 0 to 6. This also means that the sum of two outcomes can be 1 only iff the regular and modified dice outcomes are 1 and 0 respectively.
+
+Let $R$ and $M$ be the outcomes of the regular and modified dice respectively.
+
+$$\implies P(R + M = 1) = P(R=1 \cap M = 0) $$
+
+$$= P(R=1) \cdot P(M = 0) $$
+
+$$\implies 1/12 = 1/6 \cdot P(M = 0) $$
+
+$$\implies P(M = 0) = 1/2 $$
+
+Similarly, considering $P(R+M=12) = 1/12 \implies P(M=6) = 1/2$
+
+These two marginal probabilities sum to 1, i.e., there is no other number on any of the faces of the modified die. The modified dice must have three 0's and three 6's.
+
