added half heads puzzle

--- a/src/data/puzzles/22.md
+++ b/src/data/puzzles/22.md
@@ -1,7 +1,7 @@
 ---
 puzzleId: 22
 title: "e^Pi or Pi^e"
-difficulty: "easy"
+difficulty: "hard"
 category: "general"
 ---
 
@@ -84,7 +84,7 @@ Thus $e^\pi$ is bigger.
 
 ---
 Notes:
-1. This puzzle is kept in the "easy" category because it is easy to ask. The answer is also "easy" to verify, using a calculator. But when solving, it is a hard puzzle.
+1. This puzzle is usually considered easy because it is easy to ask and verify (using a calculator). But when solving, it is a more difficult than many of the hard puzzles here.
 
 2. Here's a plot of $f(x)=x^{1/x}$ 
 
