📝 improved half heads queston

--- a/src/data/puzzles/32.md
+++ b/src/data/puzzles/32.md
@@ -7,7 +7,8 @@ category: "probability"
 
 ## Question
 
-Let $X$ be a random variable that takes value 0 or 1 with 50% probability each, define a new random variable $Y$ that takes the value 0 with 75% probability and 1 with 25% probability. You may use $X$.
+Let $X$ be a random variable that takes value 0 or 1 with 50% probability each.
+You need to define a new random variable $Y$ as a function of $X$, such that $Y$ has the value 1 with 25% probability and 0 otherwise.
 
 
 ## Hint
@@ -39,7 +40,7 @@ $$Y = X \cdot X ^\prime$$
 
 This way, if both  $X$ and $X^\prime$ are 1 then $Y$ will be 1, otherwise zero.
 
-This is not the same as $Z = X^2$ because $Z$ can take the value 0 or 1 with probability 50% each. 
+This is not the same as $Z = X^2$ because $Z$ can take the value 0 or 1 with probability 50% each.
 
 ---
 
